--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Her power</h1>
+    <p>Lorem ipsum dolor sit <b>amet consectetur adipisicing</b> elit. Nisi quisquam molestiae odit rerum quia tempora, magnam laudantium impedit minima ad repudiandae sit eveniet ducimus porro. Quos dolore animi nesciunt? Temporibus!</p>
     
 </body>
 </html>
